<resources>
    <string name="app_name">GasIT</string>
    <string name="usernameLbl">Username:</string>
    <string name="usernameHint">Enter Username</string>
    <string name="passwordLbl">Password:</string>
    <string name="passwordHint">Enter Password</string>
    <string name="cancelBtn">Cancel</string>
    <string name="loginBtn">Log In</string>
    <string name="registerBtn">Register</string>

    <string name="registerTitle">Register</string>
    <string name="firstnameLbl">First Name:</string>
    <string name="firstnameHint">Enter First Name</string>
    <string name="lastnameLbl">Last Name:</string>
    <string name="lastnameHint">Enter Last Name</string>
    <string name="addressLbl">Address:</string>
    <string name="addressHint">Enter Address</string>
    <string name="contactLbl">Contact #:</string>
    <string name="contactHint">+639</string>
    <string name="reenterpassHint">********************</string>
    <string name="reenterpassLbl">Re-enter Password:</string>
    <string name="sexLbl">Sex:</string>
    <string name="femaleRadioBtn">Female</string>
    <string name="maleRadioBtn">Male</string>
    <string name="ageLbl">Age:</string>
    <string name="ageHint">18+</string>
    <string name="accounttypeLbl">Account Type:</string>
    <string name="consumerRadioBtn">Consumer</string>
    <string name="retailerRadioBtn">Retailer</string>
    <string name="termsconditionsChckBox">I accept the Term of Use &amp; Privacy Policy</string>

    <string name="cOrderBtn">Order to GasIT</string>
    <string name="cLocationBtn">Check Your Location</string>
    <string name="title_activity_customer_navigation">customerNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation Text -->
    <string name="nav_home">Home</string>
    <string name="nav_gas">Order</string>
    <string name="nav_map">Location</string>
    <string name="nav_order_status">Orders</string>
    <string name="nav_order_pending">Pending</string>
    <string name="nav_order_shipping">Shipping</string>
    <string name="nav_order_delivered">Delivered</string>
    <string name="nav_warehouse">Warehouse</string>
    <string name="nav_sales">Sales</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_manage_account">Manage Account</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About GasIT</string>
    <string name="nav_report">Report</string>
    <string name="nav_term_and_policy">Term and Policy</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_account_type">Account Type</string>
    <string name="nav_user_name">User Name</string>
    <string name="warehouseBtn">Your Warehouse</string>
    <string name="recordsBtn">Transaction Records</string>
    <string name="nameHeader">Name</string>
    <string name="itemsHeader">Items</string>
    <string name="priceHeader">Price</string>
    <string name="pcsHeader">Pcs</string>
    <string name="dateHeader">Date Purchase</string>
    <string name="registration_title">GasIT Register Account</string>
    <string name="title_activity_customer_interface_tab">CustomerInterfaceTab</string>
    <string name="tab_text_1">Order to GasIT</string>
    <string name="tab_text_2">Check Your Location</string>

    <!-- Gasoline Card View -->
    <string name="gasoline_image">Gasoline Image</string>
    <string name="gasoline_name">Name</string>
    <string name="gasoline_price">₱%.2f</string>
    <string name="gasoline_stock">%d Remaining</string>
    <string name="gasoline_out_of_stock">Out of Stock</string>
    <string name="gasoline_weight">12 kgs.</string>

    <!-- Order Activity -->
    <string name="gasoline_total">Total: ₱%.2f</string>
    <string name="gasoline_how_many">0</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="edit_address">Edit Address</string>

    <!-- Gasoline Create Gasoline Label -->
    <string name="gasoline_name_label">Name</string>
    <string name="gasoline_name_hint">Liquefied Petroleum Gas</string>
    <string name="gasoline_weight_label">Weight (in kg)</string>
    <string name="gasoline_weight_hint">10.1 or 10</string>
    <string name="gasoline_price_label">Price ₱</string>
    <string name="gasoline_price_hint">500 or 400.50</string>
    <string name="gasoline_stock_label">Stocks</string>
    <string name="gasoline_stock_hint">50</string>
    <string name="gasoline_create">Create Gasoline</string>
    <string name="gasoline_cancel_create">
        Are you sure you want to cancel creating gasoline and go back to home?
    </string>

    <!-- Sign In -->
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_register">Register</string>

    <!-- Sign Up Label -->
    <string name="signup">Sign Up</string>
    <string name="signup_first_name_label">First Name</string>
    <string name="signup_first_name_hint">Jose</string>
    <string name="signup_last_name_label">Last Name</string>
    <string name="signup_last_name_hint">Rizal</string>
    <string name="signup_phone_number_label">Phone Number</string>
    <string name="signup_phone_number_hint">+963895671234</string>
    <string name="signup_address_label">Address</string>
    <string name="signup_address_hint">HouseNo. St Brgy , City</string>

    <string name="signup_gender_label">Gender</string>
    <string name="signup_gender_male">Male</string>
    <string name="signup_gender_female">Female</string>
    <string name="signup_gender_prefer_not_to_say">Prefer not to say</string>
    <string name="signup_age_label">Age</string>
    <string name="signup_age_hint">22</string>

    <string name="signup_email_label">Email</string>
    <string name="signup_email_hint">jose_rizal@gmail.com</string>
    <string name="signup_password_label">Password</string>
    <string name="signup_password_hint">********</string>
    <string name="signup_confirm_password_label">Confirm Password</string>
    <string name="signup_confirm_password_hint">********</string>

    <!-- Button Text -->
    <string name="go_back">Go Back</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="proceed">Proceed</string>
    <string name="create_item">Create %s</string>
    <string name="edit_item">Edit %s</string>
    <string name="update_item">Update %s</string>
    <string name="delete_item">Delete %s</string>

    <!-- Order Fragment -->
    <string name="notification">%d</string>
    <string name="orders_status">Status</string>
    <string name="orders_pending">Pending</string>
    <string name="orders_shipping">Shipping</string>
    <string name="orders_delivered">Delivered</string>

    <!-- Order CardView -->
    <string name="order_info">Order Info</string>
    <string name="order_name">%s</string>
    <string name="order_computation">₱%.2f x %dpcs = </string>
    <string name="order_total">₱%.2f</string>
    <string name="order_date">%s</string>
    <string name="customer_info">Customer Info</string>
    <string name="customer_phone_number">%s</string>
    <string name="customer_address">%s</string>
    <string name="change_status">Change Status</string>

    <!-- Sales Fragment -->
    <string name="sales_date">DD/MM/YYYY</string>
    <string name="sales_previous">Previous</string>
    <string name="sales_next">Next</string>
    <string name="sales_show_per">Show per:</string>
    <string name="sales_date_format_spinner">Date Format Spinner</string>
    <string name="sales_sales_table">ScrollView for SalesTableLayout</string>

    <!-- Facebook -->
    <string name="facebook_app_id">1183160985840285</string>
    <string name="fb_login_protocol_scheme">fb1183160985840285</string>

    <string name="item_availability">Item Availability</string>
    <string name="order_btn">Order</string>
    <string name="product_image">Product Image</string>
    <string name="item_Availability03">7 Remaining</string>
    <string name="item_Price03">P890.00</string>
    <string name="item_Name03">Solane (11kgs.)</string>
    <string name="item_Availability02">Out of Stock</string>
    <string name="item_Price02">P850.00</string>
    <string name="item_Name02">Petron Gasul (11kgs.)</string>
    <string name="item_Availability01">28 Remaining</string>
    <string name="item_Price01">P780.00</string>
    <string name="item_Name01">Island Gas (11kgs.)</string>
    <string name="item_Availability05">13 Remaining</string>
    <string name="item_Price05">P780.00</string>
    <string name="item_Name05">Fiesta Gas (11kgs.)</string>
    <string name="item_Name04">Brent Gas (11kgs.)</string>
    <string name="item_Availability04">83 Remaining</string>
    <string name="item_Price04">P650.00</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_customer_main">CustomerMainActivity</string>
    <string name="title_activity_retailer_main">RetailerMainActivity</string>
    <string name="title_activity_create_gasoline">CreateGasolineActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sample_text">Sample Text</string>
    <string name="signup_role_label">Account Role</string>
    <string name="signup_role_retailer">Retailer</string>
    <string name="signup_role_customer">Customer</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="title_activity_profile_navigation">profile_navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>