<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:padding="20sp"
    tools:context=".RegistrationForm">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adamina"
        android:shadowColor="#FFFFFF"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/registration_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <LinearLayout
        android:id="@+id/firstnameH_Layout"
        android:layout_width="330sp"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100sp"
            android:text="@string/firstnameLbl"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/regFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            android:hint="@string/firstnameHint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lastnameH_Layout"
        android:layout_width="330sp"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100sp"
            android:text="@string/lastnameLbl"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/regLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            android:hint="@string/lastnameHint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contactH_Layout"
        android:layout_width="330sp"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368">

        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/contactLbl"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/regContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            android:hint="@string/contactHint"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:singleLine="false"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/usernameH_Layout"
        android:layout_width="330sp"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.439">

        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/usernameLbl"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/regUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            android:hint="@string/usernameHint"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passH_Layout"
        android:layout_width="330sp"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.509">

        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/passwordLbl"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/regPassword1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            android:hint="@string/passwordHint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reenterpassH_Layout"
        android:layout_width="330sp"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.581">

        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/reenterpassLbl"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/regPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            android:hint="@string/reenterpassHint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sexH_Layout"
        android:layout_width="330sp"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653">

        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/sexLbl"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/regSexGroupRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/regMaleRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:text="@string/maleRadioBtn" />

            <RadioButton
                android:id="@+id/regFemaleRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:text="@string/femaleRadioBtn" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ageH_Layout"
        android:layout_width="330sp"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726">

        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/ageLbl"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/regAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="@string/ageHint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="2"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/accTypeH_Layout"
        android:layout_width="330sp"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.801">

        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/accounttypeLbl"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/regTypeGroupRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/regConsumerRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:text="@string/consumerRadioBtn" />

            <RadioButton
                android:id="@+id/regRetailerRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:text="@string/retailerRadioBtn" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addressH_Layout"
        android:layout_width="330sp"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100sp"
            android:text="@string/addressLbl"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/regAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            android:hint="@string/addressHint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|text"
            android:lines="2"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/regTermsChckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/termsconditionsChckBox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

    <LinearLayout
        android:id="@+id/buttonH_Layout"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="20dp">

        <Button
            android:id="@+id/regCancelBtn"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:backgroundTint="#3D68D6"
            android:text="@string/cancelBtn"
            tools:ignore="ButtonStyle"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/regRegisterBtn"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:layout_marginStart="10sp"
            android:layout_marginLeft="10sp"
            android:backgroundTint="#3D68D6"
            android:text="@string/registerBtn"
            tools:ignore="ButtonStyle"
            tools:targetApi="lollipop" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>