<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="6dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/orderCardContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:padding="@dimen/appbar_padding">

        <TextView
            android:id="@+id/orderDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_date"
            android:textColor="@color/white"
            android:textSize="@dimen/information_text_size"
            app:layout_constraintBottom_toTopOf="@id/orderInfoTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/orderInfoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_info"
            android:textColor="@color/white"
            android:textSize="@dimen/card_view_subtitle_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/orderNameTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orderDateTextView" />

        <TextView
            android:id="@+id/orderNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_name"
            android:textColor="@color/white"
            android:textSize="@dimen/card_view_information_text_size"
            app:layout_constraintBottom_toTopOf="@id/orderComputationTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orderInfoTextView" />

        <TextView
            android:id="@+id/orderComputationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_computation"
            android:textColor="@color/white"
            android:textSize="@dimen/card_view_information_text_size"
            app:layout_constraintBottom_toBottomOf="@id/orderTotalTextView"
            app:layout_constraintStart_toStartOf="@id/orderNameTextView"
            app:layout_constraintTop_toTopOf="@id/orderTotalTextView" />

        <TextView
            android:id="@+id/orderTotalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/order_total"
            android:textColor="@color/white"
            android:textSize="@dimen/card_view_subtitle_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/orderComputationTextView"
            app:layout_constraintTop_toBottomOf="@id/orderNameTextView" />

        <TextView
            android:id="@+id/customerInfoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/customer_info"
            android:textColor="@color/white"
            android:textSize="@dimen/card_view_subtitle_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/customerPhoneNumberTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orderComputationTextView" />

        <TextView
            android:id="@+id/customerPhoneNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_phone_number"
            android:textColor="@color/white"
            android:textSize="@dimen/card_view_information_text_size"
            app:layout_constraintBottom_toTopOf="@id/customerAddressTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/customerInfoTextView" />

        <TextView
            android:id="@+id/customerAddressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_address"
            android:textColor="@color/white"
            android:textSize="@dimen/card_view_information_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/customerPhoneNumberTextView" />

        <Button
            android:id="@+id/changeStatusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/light_blue"
            android:paddingHorizontal="10dp"
            android:text="@string/change_status"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/small_button_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customerAddressTextView"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>